made modification in designs
