# public/swagger-docs/swagger.json
@@ -185,6 +185,20 @@
                 }
             }
         },
+        "/api/suburbs": {
+            "get": {
+                "tags": [
+                    "General"
+                ],
+                "summary": "List of Suburbs",
+                "operationId": "9fb23623365982eeeba6a0a1b81a7cf1",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/api/instructor-register": {
             "post": {
                 "tags": [
