# routes/api.php
@@ -53,5 +53,6 @@ Route::group(['middleware' => 'cors'], function() {
 
     /** Common APIs starts */
     Route::get('states', [CommanAPIController::class, 'getStates']);
+    Route::get('suburbs', [CommanAPIController::class, 'getSuburbs']);
     /** Common APIs ends */ 
 });
